--- a/main.ipynb
+++ b/main.ipynb
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
  "cells": [
   {
    "cell_type": "markdown",
@@ -93,6 +92,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "\n",
+    "## Simple Scatter Plot V2\n",
     "\n",
     "def show_scatter_plot(X_column, Y_column, dataframe):\n",
     "  X = dataframe[X_column]\n",
@@ -114,6 +114,8 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import seaborn as sns\n",
+    "\n",
+    "## Simple Scatter Plot \n",
     "\n",
     "def showScatterPlotWithLinearReg(X_column, Y_column, df):\n",
     "  X = df[[X_column]]\n",
@@ -188,61 +190,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-=======
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3uVipM2ug8MN"
-      },
-      "source": [
-        "Ako ay isang pinoy, sa puso't diwa"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Hello World\")\n",
-        "\n",
-        "\n",
-        "I'm a doopy doober,\n",
-        "DOOBY DOOPER\n",
-        "\n",
-        "DOOOBY DOOPER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8YKmCehRg9Nb",
-        "outputId": "64a01943-6ddf-4baf-da03-4a778ce6d902"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World\n",
-            "I am a mexican faggot, YEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH!\n"
-          ]
-        }
-      ]
-    }
-  ],
-  "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
-}
->>>>>>> c15dd46a21bbca9b23859adf87c08458bdea5b65
