--- a/main.ipynb
+++ b/main.ipynb
@@ -70,11 +70,35 @@
     "csv_name = \"\"\n",
     "\n",
     "if not csv_name == \"\": \n",
-    "    df = pd.read_csv(\"\") # Insert CSV here\n",
+    "    df = pd.read_csv(csv_name) # Insert CSV here\n",
     "\n",
+    "    # For cleaning purposes\n",
     "    df = df.fillna(0)\n",
     "\n",
+    "    # Display DF\n",
+    "    df.head()\n",
     "    display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelling\n",
+    "\n",
+    "- sir gave us a code to work with.\n",
+    "    - The Code Below:\n",
+    "\n",
+    "        ```python\n",
+    "        X = df['Expenses']\n",
+    "        y = df['Profit']\n",
+    "\n",
+    "        X = sm.add_constant(X)\n",
+    "\n",
+    "        model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "        print(model.summary())\n",
+    "        ```"
    ]
   },
   {
