Still waiting for sir's dataset.
Sir please just send the darn file.

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "# Goals\n",
     "- [] Step 1: Load dataset\n",
+    "    - [ ] Still awating sir's dataset.\n",
     "- [] Step 2: Ask the user to pick single or multiple variables that can be \"x\", and choose only one that can be \"y\".\n",
     "- [] Step 3: Run the Linear Regression Function.\n",
     "- [] Step 4: Ask the user if it wants to solve for \"y\"."
