--- a/main.ipynb
+++ b/main.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  2023-01-05  109598.605025   65601.864044   88503.281549"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.783\n",
       "Method:                 Least Squares   F-statistic:                     3612.\n",
       "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        23:16:50   Log-Likelihood:                -11239.\n",
+      "Time:                        23:34:12   Log-Likelihood:                -11239.\n",
       "No. Observations:                1000   AIC:                         2.248e+04\n",
       "Df Residuals:                     998   BIC:                         2.249e+04\n",
       "Df Model:                           1                                         \n",
@@ -245,8 +245,8 @@
       "R-squared for Expenses: 0.7835\n",
       "# -----------------------------------------------------\n",
       "\n",
-      "1875.84 + 1.20 * 10 = 1887.8194469175562\n",
-      "1887.8194469175562\n"
+      "Profit = 1875.84 + 1.20 * 69420 = 85070.96341242461\n",
+      "Profit = 85070.96341242461\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "import seaborn as sns\n",
     "\n",
-    "## Simple Scatter Plot \n",
+    "# Simple Scatter Plot \n",
     "\n",
     "def showScatterPlotWithLinearReg(X_column, Y_column, df):\n",
     "  X = df[[X_column]]\n",
@@ -332,16 +332,24 @@
     "  intercept = model.intercept_\n",
     "  coef = model.coef_[0]\n",
     "\n",
-    "  \n",
-    "  XUserInput = input(\"Input an X Value of Linear Regression Equation (escape to quit):\")\n",
-    "  try:\n",
-    "    val = int(XUserInput) \n",
-    "  except ValueError:\n",
-    "    print(\"ERROR: Invalid input.\")\n",
-    "    flag = False\n",
+    "\n",
+    "  IsError = False\n",
+    "  XUserInput = 0\n",
+    "  while True:\n",
+    "    IsError = False\n",
+    "    try:\n",
+    "      temp = input(\"Input an X Value of Linear Regression Equation (escape to quit):\")\n",
+    "      val = float(temp)\n",
+    "    except ValueError:\n",
+    "      IsError = True\n",
+    "      print(\"ERROR: Invalid input.\")\n",
+    "    \n",
+    "    if not IsError:\n",
+    "      XUserInput = temp\n",
+    "      break\n",
     "  Y = intercept + coef * float(XUserInput)\n",
     "\n",
-    "  print(f\"{intercept:.2f} + {coef:.2f} * {XUserInput} = {Y}\")\n",
+    "  print(f\"{Y_column} = {intercept:.2f} + {coef:.2f} * {XUserInput} = {Y}\")\n",
     "  return Y  \n",
     "\n",
     "# ----\n",
@@ -349,7 +357,7 @@
     "print(\"Starting the Scatter Plot Function...\")\n",
     "showScatterPlotWithLinearReg(\"Expenses\", \"Profit\", df)\n",
     "\n",
-    "print(getTheYInTheLinearRegression(\"Expenses\", \"Profit\", df))"
+    "print(\"Profit =\", getTheYInTheLinearRegression(\"Expenses\", \"Profit\", df))"
    ]
   },
   {
