--- a/main.ipynb
+++ b/main.ipynb
@@ -14,9 +14,8 @@
     "# Goals\n",
     "- [X] Step 1: Load dataset\n",
     "    - [X] Still awating sir's dataset.\n",
-    "- [] Step 2: Ask the user to pick single or multiple variables that can be \"x\", and choose only one that can be \"y\".\n",
-    "- [] Step 3: Run the Linear Regression Function.\n",
-    "- [] Step 4: Ask the user if it wants to solve for \"y\"."
+    "- [X] Step 3: Run the Linear Regression Function.\n",
+    "- [X] Step 4: Make the user input x to solve y in the getTheYInTheLinearRegression() function."
    ]
   },
   {
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +142,7 @@
        "4  2023-01-05  109598.605025   65601.864044   88503.281549"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.783\n",
       "Method:                 Least Squares   F-statistic:                     3612.\n",
       "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        23:44:27   Log-Likelihood:                -11239.\n",
+      "Time:                        23:53:46   Log-Likelihood:                -11239.\n",
       "No. Observations:                1000   AIC:                         2.248e+04\n",
       "Df Residuals:                     998   BIC:                         2.249e+04\n",
       "Df Model:                           1                                         \n",
@@ -245,6 +244,8 @@
       "R-squared for Expenses: 0.7835\n",
       "# -----------------------------------------------------\n",
       "\n",
+      "ERROR: Invalid input.\n",
+      "ERROR: Invalid input.\n",
       "Profit = 1875.84 + 1.20 * 20 = 1899.8037638697976\n",
       "Profit = 1899.8037638697976\n",
       "\n",
@@ -257,7 +258,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.825\n",
       "Method:                 Least Squares   F-statistic:                     4709.\n",
       "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        23:44:32   Log-Likelihood:                -11310.\n",
+      "Time:                        23:53:51   Log-Likelihood:                -11310.\n",
       "No. Observations:                1000   AIC:                         2.262e+04\n",
       "Df Residuals:                     998   BIC:                         2.263e+04\n",
       "Df Model:                           1                                         \n",
@@ -305,8 +306,8 @@
       "R-squared for Expenses: 0.8251\n",
       "# -----------------------------------------------------\n",
       "\n",
-      "Revenue = 5043.46 + 1.47 * 20 = 5072.837659763163\n",
-      "Revenue = 5072.837659763163\n"
+      "Revenue = 5043.46 + 1.47 * 10 = 5058.147230089274\n",
+      "Revenue = 5058.147230089274\n"
      ]
     }
    ],
