--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  2023-01-05  109598.605025   65601.864044   88503.281549"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,8 @@
       "Dep. Variable:                 Profit   R-squared:                       0.784\n",
       "Model:                            OLS   Adj. R-squared:                  0.783\n",
       "Method:                 Least Squares   F-statistic:                     3612.\n",
-      "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        23:53:46   Log-Likelihood:                -11239.\n",
+      "Date:                Wed, 17 Jul 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        00:15:23   Log-Likelihood:                -11239.\n",
       "No. Observations:                1000   AIC:                         2.248e+04\n",
       "Df Residuals:                     998   BIC:                         2.249e+04\n",
       "Df Model:                           1                                         \n",
@@ -244,12 +244,10 @@
       "R-squared for Expenses: 0.7835\n",
       "# -----------------------------------------------------\n",
       "\n",
-      "ERROR: Invalid input.\n",
-      "ERROR: Invalid input.\n",
-      "Profit = 1875.84 + 1.20 * 20 = 1899.8037638697976\n",
-      "Profit = 1899.8037638697976\n",
+      "Profit = 1875.84 + 1.20 * 90 = 1983.6939825354868\n",
+      "Profit = 1983.6939825354868\n",
       "\n",
-      "------ Let's test out Revenue(Y) with Expense(X). ------ \n",
+      "Let's test out Revenue(Y) with Expense(X).\n",
       "\n",
       "# -----------------  OLS Regression Results -------------------------\n",
       "                            OLS Regression Results                            \n",
@@ -257,8 +255,8 @@
       "Dep. Variable:                Revenue   R-squared:                       0.825\n",
       "Model:                            OLS   Adj. R-squared:                  0.825\n",
       "Method:                 Least Squares   F-statistic:                     4709.\n",
-      "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        23:53:51   Log-Likelihood:                -11310.\n",
+      "Date:                Wed, 17 Jul 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        00:15:34   Log-Likelihood:                -11310.\n",
       "No. Observations:                1000   AIC:                         2.262e+04\n",
       "Df Residuals:                     998   BIC:                         2.263e+04\n",
       "Df Model:                           1                                         \n",
@@ -306,8 +304,8 @@
       "R-squared for Expenses: 0.8251\n",
       "# -----------------------------------------------------\n",
       "\n",
-      "Revenue = 5043.46 + 1.47 * 10 = 5058.147230089274\n",
-      "Revenue = 5058.147230089274\n"
+      "Revenue = 5043.46 + 1.47 * 90 = 5175.670667480388\n",
+      "Revenue = 5175.670667480388\n"
      ]
     }
    ],
@@ -401,7 +399,7 @@
     "  while True:\n",
     "    IsError = False\n",
     "    try:\n",
-    "      temp = input(\"Input an X Value of Linear Regression Equation (input number to quit):\")\n",
+    "      temp = input(\"Input an X Value of Linear Regression Equation:\")\n",
     "      val = float(temp)\n",
     "    except ValueError:\n",
     "      IsError = True\n",
@@ -423,7 +421,7 @@
     "showScatterPlotWithLinearReg(\"Expenses\", \"Profit\", df)\n",
     "print(\"Profit =\", getTheYInTheLinearRegression(\"Expenses\", \"Profit\", df))\n",
     "\n",
-    "print(\"\\n------ Let's test out Revenue(Y) with Expense(X). ------ \\n\")\n",
+    "print(\"\\nLet's test out Revenue(Y) with Expense(X).\\n\")\n",
     "OLSRegressionResult(\"Expenses\", \"Revenue\", df)\n",
     "\n",
     "print(\"Starting the Scatter Plot Function...\")\n",
