--- a/main.ipynb
+++ b/main.ipynb
@@ -436,17 +436,20 @@
     "# Guide Questions on Insights\n",
     "1. What can you say About the Model?\n",
     "    - Michael: I believe the model is good.\n",
+    "    - Tripolca: I believe that the model is very good at showing the correlation between the variables.\n",
     "2. Is It a Good Model?\n",
     "    - Michael: I think so.\n",
+    "    - Tripolca: I believe that it's a good model since it excels in showing how correlated the three variables are.\n",
     "3. What happens to Revenue when Expense increases according to the model?\n",
     "    - Michael: According to my Simple Linear Regression Model, which is comparing only Revenue and Expenses, the higher the expenses are, the higher the revenue gets.\n",
-    "    - Michael: It has a strong positive linear correlation. This is because according to the R-Square, if it's close to 1 it probably has a strong correlation and 0.8251 is close to 1, therefore Revenue and Expenses has a strong positive linear correlation."
+    "    - Michael: It has a strong positive linear correlation. This is because according to the R-Square, if it's close to 1 it probably has a strong correlation and 0.8251 is close to 1, therefore Revenue and Expenses has a strong positive linear correlation.\n",
+    "    - Tripolca: By simply looking at the scatterplot, we can see that the profit and expense grow alongside each other; When Revenue gets higher, so does the Expenses."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
