--- a/main.ipynb
+++ b/main.ipynb
@@ -437,7 +437,7 @@
     "1. What can you say About the Model?\n",
     "    - Michael: I believe the model is good.\n",
     "    - Tripolca: I believe that the model is very good at showing the correlation between the variables.\n",
-
+    "    - Fortuna: For me the model is good it shows the  expense and  revenue.\n",
     "2. Is It a Good Model?\n",
     "    - Michael: I think so.\n",
     "    - Tripolca: I believe that it's a good model since it excels in showing how correlated the three variables are.\n",
