--- a/main.ipynb
+++ b/main.ipynb
@@ -445,7 +445,7 @@
     "3. What happens to Revenue when Expense increases according to the model?\n",
     "    - Michael: According to my Simple Linear Regression Model, which is comparing only Revenue and Expenses, the higher the expenses are, the higher the revenue gets.\n",
     "    - Michael: It has a strong positive linear correlation. This is because according to the R-Square, if it's close to 1 it probably has a strong correlation and 0.8251 is close to 1, therefore Revenue and Expenses has a strong positive linear correlation.\n",
-    "    - Tripolca: By simply looking at the scatterplot, we can see that the profit and expense grow alongside each other; When Revenue gets higher, so does the Expenses.\n",
+    "    - Tripolca: By simply looking at the scatterplot, we can see that the profit and expense grow alongside each other; When Revenue gets higher, so does the Expenses."
    ]
   }
  ],
