--- a/main.ipynb
+++ b/main.ipynb
@@ -439,7 +439,7 @@
     "    - Tripolca: I believe that the model is very good at showing the correlation between the variables.\n",
     "    - Fortuna: For me the model is good it shows the  expense and  revenue.\n",
     "2. Is It a Good Model?\n",
-    "    - Michael: I think so.\n",
+    "    - Michael: I believe so.\n",
     "    - Tripolca: I believe that it's a good model since it excels in showing how correlated the three variables are.\n",
     "    - Fortuna: Yes, It is. \n",
     "3. What happens to Revenue when Expense increases according to the model?\n",
