--- a/main.ipynb
+++ b/main.ipynb
@@ -438,15 +438,18 @@
     "    - Michael: I believe the model is good.\n",
     "    - Tripolca: I believe that the model is very good at showing the correlation between the variables.\n",
     "    - Fortuna: For me the model is good it shows the  expense and  revenue.\n",
+    "    - Ador: I think the model is effective.\n",
     "2. Is It a Good Model?\n",
     "    - Michael: I believe so.\n",
     "    - Tripolca: I believe that it's a good model since it excels in showing how correlated the three variables are.\n",
     "    - Fortuna: Yes, It is. \n",
+    "    - Ador: I think it is a good model.\n", 
     "3. What happens to Revenue when Expense increases according to the model?\n",
     "    - Michael: According to my Simple Linear Regression Model, which is comparing only Revenue and Expenses, the higher the expenses are, the higher the revenue gets.\n",
     "    - Michael: Furthermore, it has a strong positive linear correlation. This is because according to the R-Square, if it's close to 1 it probably has a strong correlation and 0.8251 is close to 1, therefore Revenue and Expenses has a strong positive linear correlation.\n",
     "    - Tripolca: By simply looking at the scatterplot, we can see that the profit and expense grow alongside each other; When Revenue gets higher, so does the Expenses.\n",
-    "    - Fortuna: By looking at the scatterplot you'll see that when expenses rise, so does the revenues. Thus, based on the coefficient of determination, it can be concluded that higher expenses result in the higher revenues."
+    "    - Fortuna: By looking at the scatterplot you'll see that when expenses rise, so does the revenues. Thus, based on the coefficient of determination, it can be concluded that higher expenses result in the higher revenues.\n",
+    "    - Ador: According to the model, when expenses increase, revenue also increases. The model shows a strong positive linear correlation between expenses and revenue, with an R-Square value of 0.8251 indicating a strong relationship. The scatterplot further supports this by showing that both profit and expenses grow together. \n"
    ]
   }
  ],
