--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,10 @@
     "- [X] Step 1: Load dataset\n",
     "    - [X] Still awating sir's dataset.\n",
     "- [X] Step 3: Run the Linear Regression Function.\n",
-    "- [X] Step 4: Make the user input x to solve y in the getTheYInTheLinearRegression() function."
+    "- [X] Step 4: Make the user input x to solve y in the getTheYInTheLinearRegression() function.\n",
+    "\n",
+    "\n",
+    "Github Link: https://github.com/Michael679089/Machine-Learning-Finals-Jupyter-Notebook"
    ]
   },
   {
@@ -443,7 +446,7 @@
     "    - Michael: I believe so.\n",
     "    - Tripolca: I believe that it's a good model since it excels in showing how correlated the three variables are.\n",
     "    - Fortuna: Yes, It is. \n",
-    "    - Ador: I think it is a good model.\n", 
+    "    - Ador: I think it is a good model.\n",
     "3. What happens to Revenue when Expense increases according to the model?\n",
     "    - Michael: According to my Simple Linear Regression Model, which is comparing only Revenue and Expenses, the higher the expenses are, the higher the revenue gets.\n",
     "    - Michael: Furthermore, it has a strong positive linear correlation. This is because according to the R-Square, if it's close to 1 it probably has a strong correlation and 0.8251 is close to 1, therefore Revenue and Expenses has a strong positive linear correlation.\n",
